--- a/WiredBrainCoffee.EmployeeManager/WiredBrainCoffee.EmployeeManager/appsettings.json
+++ b/WiredBrainCoffee.EmployeeManager/WiredBrainCoffee.EmployeeManager/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "EmployeeManagement": "Data Source=LT-wrDNvauI3dIu;Initial Catalog=EmployeeManagement;Integrated Security=True;Trust Server Certificate=True"
+    }
 }
