--- a/WiredBrainCoffee.EmployeeManager/WiredBrainCoffee.EmployeeManager/appsettings.json
+++ b/WiredBrainCoffee.EmployeeManager/WiredBrainCoffee.EmployeeManager/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
     "ConnectionStrings": {
-        "EmployeeManagement": "Data Source=LT-wrDNvauI3dIu;Initial Catalog=EmployeeManagement;Integrated Security=True;Trust Server Certificate=True"
+        "EmployeeManagement": "Data Source=LT-wrDNvauI3dIu;Initial Catalog=EmpMgmt;Integrated Security=True;Trust Server Certificate=True"
     }
 }
